--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-
+/javascript/
+/assets/
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
